--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
         <h2>Mis Proyectos</h2>
         <ul>
             <li>
-                <img src="luna2.jpg" alt="Proyecto 1">
+                <img src="" alt="Proyecto 1">
             </li>
             <li>
-                <img src="mockup1.jpg" alt="Proyecto 2">
+                <img src="" alt="Proyecto 2">
             </li>
             <!-- Agrega más proyectos aquí -->
         </ul>
