--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
 
             
     </section>
-    <footer>
+    <header>
         <p>© 2023 Estudio Creativo. Todos los derechos reservados.</p>
-    </footer>
+    </header>
 </body>
 </html>
