--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
               <div class="container">
               <div class="row">
               <div class="col-sm-6 col-md-4">
-               <a href="https://www.instagram.com/mi-perfil" target="_blank" class="btn btn-danger btn-block">
+               <a href="" target="_blank" class="btn btn-danger btn-block">
                <i class="fab fa-instagram"></i> Instagram
                   </a>
                   </div>
